# ArshiaNetLogicSim

./: .gitignore  README.md
Backend/: CMakeLists.txt
Backend/admin/: set_password.py
Backend/linux_app/: CMakeLists.txt  aarch64-toolchain.cmake
Backend/linux_app/include/: app_editor.h  app_state.h  app_utils.h  app_verification.h  logic_ast.h  logic_minimizer.h  logic_netlist.h  logic_parser.h  logic_program.h  net_json.h  net_udp.h  utils_colors.h  utils_timer.h
Backend/linux_app/include/hal/: hal_general.h  hal_gpio.h  hal_joystick.h  hal_led.h  hal_rotary.h
Backend/linux_app/src/: main.c  utils_timer.c
Backend/linux_app/src/app/: app_editor.c  app_state.c  app_utils.c  app_verification.c
Backend/linux_app/src/hal/: hal_general.c  hal_gpio.c  hal_joystick.c  hal_led.c  hal_rotary.c
Backend/linux_app/src/logic/: logic_ast.c  logic_minimizer.c  logic_netlist.c  logic_parser.c  logic_program.c
Backend/linux_app/src/net/: net_json.c  net_udp.c
Frontend/node_server/: package-lock.json  package.json  pnpm-lock.yaml  server.js  tailwind.config.js
Frontend/node_server/public/: index.html  input.css  output.css  style.css
Frontend/node_server/public/js/: kmap.js  main.js  visualizer.js
